@@ -126,6 +126,7 @@ Thanks also to:
 
 * Dennis Schridde, for contributing patches to improve portability.
 * Timothy Lee, for finding bugs and supplying patches.
+* Richard Kiss, for supplying a patch for MacOS X compilation.
 
 I must thank the developers above, whose code I have used. Also, I would like
 to thank the Free Software Foundation and its contributors, for gcc, gdb and
