@@ -1,5 +1,6 @@
 Changes in 0.6.1
 - recompression support for gzip files made with zlib:gzio.c or gzip -n
+- fix compilation on MacOS X
 
 Changes in 0.6
 - fix out-of-bounds memory access when processing last block of non-compressed
